# freecad-parametric-fea

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  Dockerflie  devcontainer.json
FreecadParametricFEA/: __init__.py  freecadmodel.py  freecadparametricfea.py  loghandler.py  parametric.py  register_freecad.py
docs/: conf.py  index.rst
examples/find_ccx/: find_ccx.FCStd  find_ccx.py
examples/hole/: optimize.py  shell_test.FCStd
examples/linkage/: linkage-example.py  linkage-results.csv
examples/notch/: notch-example.py
tests/: test_autofind_path.py  test_exceptions.py  test_parametric.py
