[tool.poetry]
authors = ["Davide Crivelli, <da.crivelli@gmail.com>"]
name = "freecadparametricfea"
version = "0.1.1"
description = "A flexible parametric FEA library based on FreeCAD"
license = "LGPL-2.1-or-later"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
]
homepage = "https://github.com/da-crivelli/freecad-parametric-fea"
repository = "https://github.com/da-crivelli/freecad-parametric-fea"


[tool.poetry.dependencies]
python = "~3.8.10"
numpy = "^1.24.1"
pandas = "^1.5.2"
plotly = "^5.12.0"
pyside2 = "^5.15.2.1"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
pylint = "^2.15.10"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"


[tool.poetry.group.docs.dependencies]
sphinx = "^6.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
